force-app/main/default/objects/PDRI__Query_Filter__c/PDRI__Query_Filter__c.object-meta.xml
<CustomObject>
    <label>Query Filter</label>
    <nameField>
        <displayFormat>QF-{00000000}</displayFormat>
        <label>Query Filter Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Query Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>