force-app/main/default/objects/PDRI__Query_Filter__c/fields/PDRI__Deployment__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Deployment__c</fullName>
    <label>Deployment</label>
    <referenceTo>PDRI__Deployment__c</referenceTo>
    <relationshipLabel>Query Filters</relationshipLabel>
    <relationshipName>Query_Filters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>