force-app/main/default/objects/PDRI__Query_Filter__c/fields/PDRI__Filter__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Filter__c</fullName>
    <label>Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>