force-app/main/default/objects/PDRI__Query_Filter__c/fields/PDRI__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Object_Name__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>